force-app/main/default/objects/FieloPLT__MemberSegment__c/FieloPLT__MemberSegment__c.object-meta.xml
<CustomObject>
    <description>It manually relates Members to Segments. It corresponds to the Manual Segment type.</description>
    <label>Member Segment</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Member Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>