force-app/main/default/objects/FieloPLT__MemberSegment__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member whose Segment is related.</description>
    <inlineHelpText>Choose a Member to assign a Segment.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Segments</relationshipLabel>
    <relationshipName>MembersSegments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>