force-app/main/default/objects/FieloPLT__MemberSegment__c/fields/FieloPLT__MemberSegmentCombination__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MemberSegmentCombination__c</fullName>
    <description>Unique, automatically generated Member ID and Segment ID field. It prevents assigning different Segments to the same Member.</description>
    <inlineHelpText>Unique, automatically generated Member ID and Segment ID field.</inlineHelpText>
    <label>Member Segment Combination</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>