force-app/main/default/objects/FieloPLT__MemberSegment__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Segment to be related to the Member Segment.</description>
    <inlineHelpText>Choose a Segment to be related to the Member Segment.</inlineHelpText>
    <label>Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloPLT__Segment__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Manual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>MembersSegments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>