force-app/main/default/objects/FieloPLT__MemberSegment__c/validationRules/FieloPLT__ProgramConsistency.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ProgramConsistency</fullName>
    <active>true</active>
    <description>The Segment belongs to other Program. Choose a Segment from the same Member Program.</description>
    <errorConditionFormula>FieloPLT__Segment__r.FieloPLT__Program__c != null &amp;&amp; 
FieloPLT__Member__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Segment__r.FieloPLT__Program__c</errorConditionFormula>
    <errorMessage>The Segment belongs to other Program. Choose a Segment from the same Member Program</errorMessage>
</ValidationRule>